# SpanNILM

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  device_signatures.yaml  pyproject.toml  requirements.txt  span_config.yaml  vercel.json
api/: background.py  deps.py  main.py  models.py
api/routers/: analysis.py  circuit_detail.py  circuits.py  dashboard.py  device_naming.py  forecast.py  profile.py  settings.py
span_nilm/: __main__.py  demo.py
span_nilm/analysis/: pipeline.py  report.py
span_nilm/collector/: recorder.py  span_client.py
span_nilm/collector/sources/: base.py  tempiq_source.py
span_nilm/detection/: event_detector.py  state_tracker.py
span_nilm/models/: classifier.py  dedicated_learner.py  seq2point.py  signature_matcher.py  signatures.py
span_nilm/profiler/: anomaly_detector.py  circuit_profiler.py  llm_analyzer.py  shape_detector.py  startup_analyzer.py  subpanel_decomposer.py  temporal_analyzer.py
span_nilm/utils/: config.py  logging.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx
web/src/components/: ActivityFeed.tsx  AlwaysOnCard.tsx  AnnualForecast.tsx  Anomalies.tsx  BillProjection.tsx  BubbleView.tsx  CostBreakdown.tsx  DateRangePicker.tsx  DeviceCard.tsx  EfficiencyScore.tsx  EnergySummary.tsx  LearnedDevices.tsx  PowerNow.tsx  PowerTimeline.tsx  SolarAnalysis.tsx  StackedTimeline.tsx  UsageTrends.tsx  WeeklyDigest.tsx
web/src/hooks/: useAnalysis.ts  useDashboard.ts
web/src/lib/: api.ts
web/src/pages/: Categories.tsx  CircuitDetail.tsx  Circuits.tsx  DeviceDetail.tsx  Settings.tsx
